# mimir

./: .cursorrules  .env.example  .gitignore  AGENTS.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tauri.conf.json  tsconfig.node.json  vite.config.ts
.github/: copilot-instructions.md
.github/agents/: provider-specialist.agent.md  tauri-bridge.agent.md
.github/hooks/: quality-guard.json
.github/instructions/: frontend-shell.instructions.md  provider-adapters.instructions.md  tauri-security.instructions.md  testing-quality.instructions.md
.github/prompts/: add-provider.prompt.md  feature-plan.prompt.md  implement-first-slice.prompt.md
docs/: API_STANDARDS.md  ARCHITECTURE.md  FIRST_SLICE.md  MIGRATION.md  SECURE_STORAGE.md  provider-template.ts
src/: App.css  App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs
src/components/: AccountCenter.tsx  ConversationPanel.tsx  QuickReply.tsx  RustStatusCard.tsx  SettingsModal.tsx  Sidebar.tsx  StreamList.tsx  ThreadDrawer.tsx  providerSurfaces.tsx
src/hooks/: useAccountConnections.ts  useAuth.ts  useNotifications.ts  useOAuthCallbacks.ts  useProviderPolling.ts
src/lib/: accountVault.ts  aggregator.ts  bridge.ts  markdown.ts  messageRepository.ts  oauthCallbacks.ts  runtime.ts
src/providers/: GmailPrimaryProvider.ts  LinkedInInboxProvider.ts  (+7 more)
tests/: aggregatorLogic.test.ts  gmailNormalization.test.ts  providerRegistry.test.ts  scenarioProvider.test.ts  tauriBridge.test.ts
(+16 files in other folders)
