[package]
name = "mimir"
version = "0.1.0"
description = "Desktop-first notification and message aggregator"
authors = ["mimir contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-stronghold = "2"
url = "2"

# Recommended by tauri-plugin-stronghold to speed up dev builds
[profile.dev.package.scrypt]
opt-level = 3
